[Payments] Same instance shipping address.

PaymentRequest.shippingAddress and PaymentResponse.shippingAddress
should be the same instance and === should return true.

Bug: 764201
Change-Id: I6c8ab3a4ca3ff61f628e32034291a6d2e218dd8b