third_party/WebKit/Source/modules/payments/PaymentResponse.h
@@ -31,6 +31,7 @@ class MODULES_EXPORT PaymentResponse final
 
  public:
   PaymentResponse(payments::mojom::blink::PaymentResponsePtr,
+                  PaymentAddress* shipping_address_,
                   PaymentCompleter*,
                   const String& requestId);
   virtual ~PaymentResponse();
